<resources>
    <string name="app_name">NotesVsShoppingList</string>
    <string name="title_notes">Мои Заметки</string>
    <string name="title_checklist">Мои Списки</string>
    <string name="title_calendar">Календарь</string>
    <string name="title_about_app">О приложении</string>
    <string name="completed_tasks_format">%s/%s</string>
    <string name="text_about">
        Приложение <b>Notes vs Shopping list</b> - \n
        удобные заметки и списки покупок \n
        Разработчики: \n
        Андрей - <a href="https://github.com/serbinav">github.com/serbinav</a> \n
        Ринат - <a href="https://github.com/Rinat-M">github.com/Rinat-M</a> \n
        Андрей - <a href="https://github.com/AndreyCas91">github.com/AndreyCas91</a>
    </string>
    <string name="title_add_notes">Добавить заметку</string>
    <string name="notes_name">Название заметки</string>
    <string name="notes_date">Дата создания заметки</string>
    <string name="notes_description">Заметка</string>
    <string name="title_add_checklist">Добавить список покупок</string>
    <string name="checklist_recycler">Список дел/покупок</string>
    <string name="note_description">Описание заметки</string>
    <string name="delete">Удалить</string>
    <string name="new_note">Новая заметка</string>
    <string name="alert_edit_text">Введите название задачи</string>
    <string name="alert_positive_btn">Сохранить</string>
    <string name="alert_negative_btn">Отмена</string>
    <string name="action_edit">Изменить</string>
    <string name="action_del">Удалить</string>
    <string name="add_note">Добавить заметку</string>
</resources>