<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.notesvsshoppinglist.ui.home.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_checklist"
        android:name="com.example.notesvsshoppinglist.ui.dashboard.ChecklistFragment"
        android:label="@string/title_checklist"
        tools:layout="@layout/fragment_checklist" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.notesvsshoppinglist.ui.notifications.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>